# Video-to-Ascii

./: Cargo.toml  README.md
.cargo/: config.toml
src/: codec_context.rs  codec_parameters.rs  decoder_codec.rs  decoding.rs  error.rs  format_context.rs  frame.rs  lib.rs  main.rs  packet.rs  packet_iterator.rs  scaler_context.rs  stream.rs  stream_iterator.rs  video.rs
