[package]
name = "video_to_ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_ffmpeg = "0.10.0"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "251741475900c9a57549d80f1b5a5e30e63d1887"
dependencies = ["ffmpeg"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }